fixed aboutme navbar on tablet

--- a/scss/media-queries/_tablet.scss
+++ b/scss/media-queries/_tablet.scss
@@ -26,6 +26,11 @@
     }
   }
 
+  .navbar-expand-lg>.container-fluid {
+    padding-right: var(--bs-gutter-x,.75rem);
+    padding-left: var(--bs-gutter-x,.75rem);
+  }
+
   .offcanvas-header {
     padding: 1rem;
   }
